--- a/logrotate/rails.conf
+++ b/logrotate/rails.conf
@@ -1,4 +1,4 @@
-/srv/http/<%= var :domain %>/current/log/*.log {
+/srv/http/<%= var :username %>/current/log/*.log {
   daily
   missingok
   rotate 7
